--- a/app/css/pages/_card.scss
+++ b/app/css/pages/_card.scss
@@ -2102,11 +2102,24 @@
   }
 }
 
-// .card-tabs,
-// .card {
-//   .ui-tooltip-answer {
-//     @media (max-width: 1024.99px) {
-//       bottom: 80px;
-//     }
-//   }
-// }
+
+@media (max-width: 1024.99px) and (min-width: 768px) {
+  .card-section {
+    position: relative;
+    min-height: 100%;
+  }
+  .card-imgs {
+    margin-bottom: 0;
+
+    &.fixed {
+      position: fixed;
+      z-index: 1;
+      top: 165px;
+    }
+    &.fixed-bottom {
+      position: absolute;
+      bottom: 0;
+      left: 0px;
+    }
+  }
+}
